# memmgrd

./: README.md
memmgrd/: CMakeLists.txt  README.md  common_definitions.h  config_reader.cpp  config_reader.h  keccak.cpp  keccak.h  logger.cpp  logger.h  main.cpp  mem_list_mgr.cpp  mem_list_mgr.h  mem_list_node.cpp  mem_list_node.h  queue.h  server.cpp  server.h  socket_conn_handler.cpp  socket_conn_handler.h
memmgrstate/: README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memmgrstate.pro
memmgrtest/: CMakeLists.txt  README.md  main.cpp
